# USD_display_layer_plugin

./: CMakeLists.txt  DisplayLayersContainer.py  DisplayLayersUI.py  README.md  __init__.py
cmake/: Defaults.cmake  Export.cmake  Options.cmake  Packages.cmake
src/: CMakeLists.txt
src/displayLayer/: CMakeLists.txt  api.h  displayLayer.cpp  displayLayer.h  generatedSchema.usda  module.cpp  moduleDeps.cpp  plugInfo.json  schema.usda  test.usda  tokens.cpp  tokens.h  wrapDisplayLayer.cpp  wrapTokens.cpp
src/usdviewDisplayLayer/: CMakeLists.txt  DisplayLayersContainer.py  DisplayLayersUI.py  __init__.py  plugInfo.json
